--- a/操作分布式搜索和分析引擎Elasticsearch/elasticsearch_dc/docker-compose.yml
+++ b/操作分布式搜索和分析引擎Elasticsearch/elasticsearch_dc/docker-compose.yml
@@ -1,15 +1,6 @@
-### docker单机部署
+# docker单节点集群部署
+# 参考:https://www.elastic.co/guide/en/elasticsearch/reference/7.11/docker.html
 
-1. pull
-
-```shell
-docker pull docker.elastic.co/elasticsearch/elasticsearch:7.11.2 
-docker pull docker.elastic.co/kibana/kibana:7.11.2
-```
-
-2. docker compose
-
-```yaml
 version: "3.8"
 services:
   elasticsearch:
@@ -29,7 +20,7 @@ services:
     ports:
       - "5601:5601"
     environment:
-      ELASTICSEARCH_HOSTS: '["http://elasticsearch:9200"]'  # kibana默认值
+      ELASTICSEARCH_HOSTS: '["http://elasticsearch:9200"]' # kibana默认值
     depends_on:
       - elasticsearch
     networks:
@@ -38,6 +29,6 @@ services:
 volumes:
   data01:
 
+
 networks:
   overlay:
-```
