--- a/操作向量数据库qdrant/qdrant_dc/docker-compose.yml
+++ b/操作向量数据库qdrant/qdrant_dc/docker-compose.yml
@@ -3,8 +3,8 @@
 
 services:
   qdrant:
-    image: qdrant/qdrant:v1.10.0
-    restart: always
+    image: qdrant/qdrant:v1.11.3
+    # restart: always
     container_name: qdrant
     ports:
       - 6333:6333
