--- a/操作KV数据redis/conf/redis.conf
+++ b/操作KV数据redis/conf/redis.conf
@@ -1,3 +1,5 @@
+# 参考见:https://redis.io/docs/latest/operate/oss_and_stack/management/config/
+
 # Redis configuration file example.
 #
 # Note that in order to read the configuration file, Redis must be
@@ -85,7 +87,8 @@
 # You will also need to set a password unless you explicitly disable protected
 # mode.
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-bind 127.0.0.1 -::1
+# bind 127.0.0.1 -::1
+bind 0.0.0.0
 
 # By default, outgoing connections (from replica to master, from Sentinel to
 # instances, cluster bus, etc.) are not bound to a specific local address. In
@@ -434,6 +437,9 @@ locale-collate ""
 # as in following example:
 #
 # save ""
+save 900 1 
+save 300 10 
+save 60 10000
 #
 # Unless specified otherwise, by default Redis will save the DB:
 #   * After 3600 seconds (an hour) if at least 1 change was performed
@@ -513,7 +519,8 @@ rdb-del-sync-files no
 # The Append Only File will also be created inside this directory.
 #
 # Note that you must specify a directory here, not a file name.
-dir ./
+# dir ./
+dir /data
 
 ################################# REPLICATION #################################
 
@@ -1048,6 +1055,7 @@ acllog-max-len 128
 # command, these will cause requirepass to be ignored.
 #
 # requirepass foobared
+requirepass qwer123456
 
 # New users are initialized with restrictive permissions by default, via the
 # equivalent of this ACL rule 'off resetkeys -@all'. Starting with Redis 6.2, it
@@ -1131,6 +1139,7 @@ acllog-max-len 128
 # output buffers (but this is not needed if the policy is 'noeviction').
 #
 # maxmemory <bytes>
+maxmemory 12gb
 
 # MAXMEMORY POLICY: how Redis will select what to remove when maxmemory
 # is reached. You can select one from the following behaviors:
@@ -1160,6 +1169,7 @@ acllog-max-len 128
 # The default is:
 #
 # maxmemory-policy noeviction
+maxmemory-policy allkeys-lru
 
 # LRU, LFU and minimal TTL algorithms are not precise algorithms but approximated
 # algorithms (in order to save memory), so you can tune it for speed or
@@ -1395,7 +1405,8 @@ disable-thp yes
 #
 # Please check https://redis.io/topics/persistence for more information.
 
-appendonly no
+# appendonly no
+appendonly yes 
 
 # The base name of the append only file.
 #
