--- a/操作KV数据redis/redis_dc/docker-compose.yaml
+++ b/操作KV数据redis/redis_dc/docker-compose.yaml
@@ -1,7 +1,7 @@
 services:
   redis:
     image: redis:7.4.4
-    container_name: redis_dc
+    container_name: redis
     restart: unless-stopped
     ports:
       - 6379:6379
